--- a/src/components/widget/Widget.module.scss
+++ b/src/components/widget/Widget.module.scss
@@ -7,6 +7,7 @@
   box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
   border-radius: 10px;
   height: 100px;
+  cursor: pointer;
 
   .left, .right {
     display: flex;
@@ -58,4 +59,8 @@
 
   }
 
+  &:hover{
+    transform:scale(1.02);
+    transition-duration: 0.5s;
+  }
 }
