--- a/src/components/sidebar/Sidebar.module.scss
+++ b/src/components/sidebar/Sidebar.module.scss
@@ -3,6 +3,10 @@
   border-right: 0.5px solid rgb(230,227,227);
   min-height: 100vh;
   background-color: white;
+
+  &.dark {
+    background-color: #333;
+  }
   
   .top {
     height:50px;
